[gd_scene load_steps=6 format=3 uid="uid://7b162kgu8chq"]

[ext_resource type="Script" uid="uid://cfef4cdhe6u58" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="PackedScene" uid="uid://d1wxhh76nx0is" path="res://components/color_block_grid.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://1xh85caxwkfn" path="res://components/color_block.tscn" id="4_1bvp3"]
[ext_resource type="AudioStream" uid="uid://dbvi66w62qwxg" path="res://sounds/type_selected.mp3" id="4_lquwl"]
[ext_resource type="AudioStream" uid="uid://dmckh7ogypavl" path="res://sounds/win.mp3" id="5_lquwl"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_0xm2m")

[node name="ColorBlockGrid" parent="." instance=ExtResource("1_ig7tw")]
position = Vector2(576, 320)

[node name="RemainStepLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 20.0
offset_top = 20.0
offset_right = 320.0
offset_bottom = 64.0
theme_override_font_sizes/bold_italics_font_size = 25
theme_override_font_sizes/italics_font_size = 25
theme_override_font_sizes/mono_font_size = 25
theme_override_font_sizes/normal_font_size = 25
theme_override_font_sizes/bold_font_size = 25
bbcode_enabled = true
text = "Remain Points: 1"

[node name="TargetHintLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 512.0
offset_right = 896.0
offset_bottom = 535.0
theme_override_font_sizes/bold_italics_font_size = 20
theme_override_font_sizes/italics_font_size = 20
theme_override_font_sizes/mono_font_size = 20
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 20
bbcode_enabled = true
fit_content = true

[node name="CurrentTypeHintLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 960.0
offset_top = 96.0
offset_right = 1000.0
offset_bottom = 119.0
text = "â–¶"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.176471)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 453.0
grow_vertical = 0
text = "Press middle mouse button to switch editing mode"

[node name="EditPanel" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 400)
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = -300.0
offset_top = 80.0
offset_bottom = -20.0
grow_vertical = 0

[node name="LevelSelector" type="ItemList" parent="EditPanel"]
layout_mode = 2
size_flags_vertical = 3
allow_search = false

[node name="ReloadLevelButton" type="Button" parent="EditPanel"]
layout_mode = 2
text = "Reload"

[node name="HBoxContainer" type="HBoxContainer" parent="EditPanel"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="EditPanel"]
layout_mode = 2
columns = 2

[node name="Label4" type="Label" parent="EditPanel/GridContainer"]
layout_mode = 2
text = "Target"

[node name="TargetOptionBox" type="OptionButton" parent="EditPanel/GridContainer"]
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "ðŸŸ¥"
popup/item_0/id = 0
popup/item_1/text = "ðŸŸ¦"
popup/item_1/id = 1
popup/item_2/text = "ðŸŸ©"
popup/item_2/id = 2
popup/item_3/text = "ðŸŸ¨"
popup/item_3/id = 3

[node name="Label3" type="Label" parent="EditPanel/GridContainer"]
layout_mode = 2
text = "Total Step"

[node name="TotalStepSpinBox" type="SpinBox" parent="EditPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="EditPanel/GridContainer"]
layout_mode = 2
text = "Column"

[node name="ColSpinBox" type="SpinBox" parent="EditPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
value = 1.0
alignment = 1

[node name="Label2" type="Label" parent="EditPanel/GridContainer"]
layout_mode = 2
text = "Row"

[node name="RowSpinBox" type="SpinBox" parent="EditPanel/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
value = 1.0
alignment = 1

[node name="TextEdit" type="TextEdit" parent="EditPanel"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2

[node name="ImportButton" type="Button" parent="EditPanel"]
layout_mode = 2
text = "Import"

[node name="ExportButton" type="Button" parent="EditPanel"]
layout_mode = 2
text = "Export"

[node name="TypeSelector" type="Control" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_right = -150.0
grow_horizontal = 0
grow_vertical = 2

[node name="BlueSelector" parent="TypeSelector" instance=ExtResource("4_1bvp3")]
position = Vector2(0, -270)
type = 1
pressed_sound = ExtResource("4_lquwl")

[node name="RedSelector" parent="TypeSelector" instance=ExtResource("4_1bvp3")]
position = Vector2(0, -160)
pressed_sound = ExtResource("4_lquwl")

[node name="YellowSelector" parent="TypeSelector" instance=ExtResource("4_1bvp3")]
position = Vector2(0, -50)
type = 3
pressed_sound = ExtResource("4_lquwl")

[node name="ResetButton" type="Button" parent="TypeSelector"]
layout_mode = 0
offset_left = 10.0
offset_top = 180.0
offset_right = 90.0
offset_bottom = 260.0
text = "Reset"

[node name="WallSelector" parent="TypeSelector" instance=ExtResource("4_1bvp3")]
position = Vector2(0, 60)
type = 4
pressed_sound = ExtResource("4_lquwl")

[node name="GreenSelector" parent="TypeSelector" instance=ExtResource("4_1bvp3")]
position = Vector2(0, 60)
type = 2
pressed_sound = ExtResource("4_lquwl")

[node name="SelectAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_lquwl")

[node name="WinAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_lquwl")
